src/index.scss
/* ... */
/* Splash Screen page ========================= */
.splash-screen {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-grow: 1;
  font-size: calc(10px + 2vmin);
  min-height: 100vh;
  background-color: #ddd;
  background-size: 100%;
  .studio-logo {
    align-self: center;
  }
}

.main-menu-wrapper {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  font-size: 1.2em;
  transition: opacity 0.6s ease;
}

[data-loading-state="loading"] {
  opacity: 1;
}

[data-loading-state="loaded"] {
  opacity: 0;
}

.game-name {
  display: flex;
  padding: 1em;
  padding-top: 0.5em;
  align-items: center;
  justify-content: center;
}

.game-name-label {
  margin-top: 0.5em;
  font-size: 3rem;
}

.studio-logo {
  display: flex;
  border: 2px solid;
  border-color: #cccccc;
  color: #b3b3b3;
  background-color: #e6e6e6;
  padding: 0.5em 3em;
  margin: 0.5em 0;
  flex-grow: 0;
  flex-shrink: 0;
  user-select: none;
  align-self: flex-start;
}

.title-page {
  display: flex;
  background-size: 100%;
  .sidebar {
    display: flex;
    flex-direction: column;
    flex-basis: 30em;
    background-color: white;
    border-right: 1px solid #ccc;
    .sidebar-header {
      background-color: #eee;
      border-bottom: 1px solid #ddd;
      margin-bottom: 0.5em;
      padding: 4em 2em;
      .logo {
        font-size: 0.75em;
      }
      .sidebar-title {
        font-weight: normal;
        color: #999;
        font-size: 1.3em;
        font-style: italic;
        margin-bottom: 0;
      }
    }
    .sidebar-links {
      display: flex;
      flex-direction: column;
      padding: 1.2em;
      margin: 0;
      font-size: 1.3em;
      flex-grow: 1;
      .sidebar-link {
        list-style-type: none;
        padding: 0.4em 0.2em;
        margin: 0;
        &:first-child {
          padding-top: 0;
        }
        .btn {
          padding: 1em;
          width: 100%;
          text-align: left;
        }
        &.spacer {
          flex-grow: 1;
        }
      }
    }
  }
}

/* Home page ========================= */
.home {
  display: flex;
  flex-grow: 1;
  font-size: 2vmin;
  .games {
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    margin-bottom: 0.6em;
    font-size: 0.74em;
    .sidebar {
      background: #ddd;
      padding: 0.8em;
      margin: 0.6em;
      margin-bottom: 0;
      &.campaign-sidebar {
        padding: 0;
        .campaign.widgets {
          padding: 0;
          margin: 0;
          .widget {
            margin: 0;
            min-height: 17em;
            flex-grow: 1;
          }
        }
      }
      .sidebar-title {
        padding: 0.2em;
        padding-bottom: 0.4em;
        margin: 0;
        color: #fff;
        font-size: 1.5em;
        user-select: none;
        text-transform: uppercase;
        .logo {
          font-size: 1rem;
        }
      }
    }
  }
}

.widgets {
  padding: 0;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  .widget {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    margin: 0.4em;
    width: 11em;
    height: 7em;
    background-color: #eee;
    border-bottom: 3px solid #ccc;
    padding: 1em;
    padding-top: 0.5em;
    user-select: none;
    &:hover {
      background-color: #fafafa;
    }
    .widget-title,
    .widget-subtitle {
      display: flex;
      flex-grow: 1;
      font-weight: normal;
      align-items: center;
      color: #999;
      padding: 0.4em 0.2em;
      //text-transform: uppercase;
    }
    .widget-title {
      font-size: 1.2em;
      position: relative;
      .tooltip {
        display: none;
        position: absolute;
        z-index: 9999;
        top: 0;
        right: 0;
        margin: 1em;
        background-color: #eee;
        box-shadow: 0 0 4px #888;
        color: #777;
        padding: 0.5em;
        min-width: 9em;
        max-width: 16em;
        text-transform: none;
        font-size: 0.9em;
      }
      .tooltip-icon {
        position: absolute;
        right: 0;
        opacity: 0.6;
        cursor: help;
        &:hover {
          opacity: 1;
          & + .tooltip {
            display: flex;
          }
        }
      }
    }
    .widget-button-wrapper {
      display: flex;
      position: relative;
      font-size: 0.95em;
      .widget-button {
        display: flex;
        flex-shrink: 0;
        font-weight: bold;
        border: 0;
        padding: 0;
        height: 11em;
        width: 13em;
        cursor: pointer;
        user-select: none;
        &:hover {
          opacity: 0.8;
          .widget-title {
            background-color: #444;
          }
        }
      }
    }
  }
}

.title .logo {
  font-size: 1rem;
}

.message-notification {
  display: inline-block;
  background-color: #ddd;
  padding: 0.5em 1em;
  min-width: 16em;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  border: 2px solid #444;
  text-align: center;
}

.message-notification[data-type="success"] {
  background-color: #d3ffc5;
  border-color: #003b08;
  color: #002004;
}

.message-notification[data-type="info"] {
  background-color: #aff3ff;
  border-color: #004a4d;
  color: #003336;
}

.message-notification[data-type="warning"] {
  background-color: #ffe6b0;
  border-color: #945400;
  color: #442700;
}

.message-notification[data-type="error"] {
  background-color: #ffb0b0;
  border-color: #5a0000;
  color: #520000;
}

.best_words_list {
  background-color: #eee;
  padding: 0.5em;
  padding-left: 2em;
  text-align: left;
  text-transform: uppercase;
  border: 1px solid #ddd;
  color: #333;
}

.version {
  position: fixed;
  user-select: none;
  bottom: 0;
  right: 0;
  opacity: 0.3;
  margin: 0.3em;
  pointer-events: none;
}
/* ... */

